fix text align

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -27,6 +27,10 @@
   article {
     text-align: justify;
 
+    h1, h2, h3, h4, h5, h6 {
+      text-align: left;
+    }
+
     a:where(.external-link):not(:has(img)):after {
       @extend %fa-icon;
       @extend .fa-solid;
